[gd_scene load_steps=4 format=3 uid="uid://rjd162g0a7eg"]

[ext_resource type="Script" uid="uid://c8mtfn7fp32hm" path="res://scenes/enemies/base_enemy.gd" id="1_sw3va"]
[ext_resource type="Texture2D" uid="uid://ckpltmwf755dm" path="res://sprites/enemies/klaed/Kla'ed - Scout - Base.png" id="2_2kb2m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kegi0"]
radius = 12.0

[node name="BaseEnemy" type="Area2D" groups=["damageable"]]
script = ExtResource("1_sw3va")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2kb2m")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2, 0)
rect = Rect2(-11, -11, 26, 26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_kegi0")

[node name="ShootingPositions" type="Node2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_exited"]
